# drive-sync

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  preview.html  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
app/: README.md  install.sh  main.py  make-package.sh  requirements.txt  uninstall.sh
app/drive_sync_desktop/: __init__.py  agent.py  bridge.py  cli.py  common.py  config_io.py  onboarding.py  rclone_backend.py  service_control.py  storage.py  tray.py  ui.py
app/drive_sync_desktop/frontend/: app.js  index.html  styles.css
app/tests/: conftest.py  test_agent.py  test_bridge.py  test_config_io.py  test_onboarding.py  test_rclone_backend.py  test_service_control.py  test_storage.py  test_tray.py
config/: example.sync.json
docs/: architecture.md  mvp.md
scripts/: build-deb.sh  test-edge-cases.sh
