[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drive-sync-desktop"
description = "A Linux desktop app for syncing local folders with Google Drive via rclone."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Diego Lis" }]
keywords = ["rclone", "google-drive", "sync", "linux", "desktop", "pywebview"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications :: GTK",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
dependencies = [
  "pywebview>=5.0",
]
dynamic = ["version"]

[project.optional-dependencies]
tray = ["pystray>=0.19", "Pillow>=10.0"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/diegolis/drive-sync"
Repository = "https://github.com/diegolis/drive-sync"
Issues = "https://github.com/diegolis/drive-sync/issues"

[project.scripts]
drive-sync-desktop = "drive_sync_desktop.cli:run_ui"
drive-sync-desktop-agent = "drive_sync_desktop.cli:run_agent"
drive-sync-desktop-tray = "drive_sync_desktop.cli:run_tray"

[tool.setuptools]
package-dir = { "" = "app" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["app"]
include = ["drive_sync_desktop*"]

[tool.setuptools.package-data]
drive_sync_desktop = ["frontend/*"]

[tool.setuptools.dynamic]
version = { attr = "drive_sync_desktop.__version__" }

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["app"]
